# project-1

./: .gitignore  Procfile  README.md  db.sqlite3  manage.py  netlify.toml  pyproject.toml  requirements.txt  vercel-modern.json  vercel-old.json  vercel-simple-backup.json  vercel.json
