[project]
name = "car-accessories-shop"
version = "1.0.0"
description = "Django car accessories e-commerce website"
dependencies = [
    "Django==4.2.7",
    "gunicorn==21.2.0",
    "python-decouple==3.8",
    "crispy-bootstrap5==0.7",
    "django-crispy-forms==2.1",
    "pillow==12.1.0",
    "mysqlclient==2.2.7",
    "asgiref==3.9.1",
    "sqlparse==0.5.3",
    "tzdata==2025.2",
    "packaging==26.0",
    "blinker==1.9.0",
    "click==8.3.1",
    "colorama==0.4.6",
    "flask-cors==6.0.2",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "markupSafe==3.0.3",
    "djangorestframework==3.16.1",
    "werkzeug==3.1.5"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
